--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,4 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
+server.port=8081
