--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.servlet.multipart.max-request-size=500MB
 spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
 server.port=8081
+images.upload.path=shared
