--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/travel_agency
-spring.datasource.username=root
+spring.datasource.url=jdbc:postgresql://localhost:5432/travel_agency
+spring.datasource.username=postgres
 spring.datasource.password=123456
 
 #spring.datasource.url=jdbc:mysql://remotemysql.com:3306/K38ahVLhsU
@@ -13,5 +13,4 @@ spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=500MB
 spring.jpa.show-sql=true
 spring.datasource.initialization-mode=always
-server.port=8081
 images.upload.path=shared
